--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=1be2334da4998fb537d2",
+    "/css/app.css": "/css/app.css?id=1557520d9f962a3cb549"
 }
